bk_ida/gccida/c0/adjust_address_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2439:36: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  adjust_address_1( rtx memref, machine_mode mode, __int64 offset, int validate, int adjust) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2444:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *expr; // [rsp+10h] [rbp-A0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2450:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // [rsp+4Ch] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2460:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( memref[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2466:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( memref[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2477:57: error: use of undeclared identifier 'machine_mode'
|| offset >= ( unsigned __int64)( get_mode_alignment( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)memref)) >> 3) ) 
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2477:72: error: expected expression
|| offset >= ( unsigned __int64)( get_mode_alignment( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)memref)) >> 3) ) 
                                                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2509:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( memref[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2519:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( memref[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2533:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( memref[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2537:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( memref[1] ) 
^    ~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2538:2: error: expected expression
 struct expr = *( tree_node **)( *( _QWORD *)&memref[1] + 8LL); 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2540:2: error: expected expression
 struct expr = 0LL; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2547:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)newa)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/emit-rtl.c:2547:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)newa)); 
                 ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/adjust_address_1/src/obj/emit-rtl.o] Error 1
